--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -177,7 +177,9 @@
 	    		</div>
 	    	</div>
 	    </div>
-
+<p>
+Hi {{name}}
+</p>
 
 		<!-- Introduce Bootstrap JS at the bottom -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
