--- a/app/static/css/homepage.css
+++ b/app/static/css/homepage.css
@@ -420,6 +420,32 @@ span.chevron{
 	}
 }
 
+.added {
+	position: absolute;
+	right: 15px;
+	top: 0px;
+	height: 24px;
+	width: 60px;
+	opacity: 1;
+	color: #FFFFFF;
+	text-align: center;
+	padding: 3px;
+	z-index: 999;
+	background-color: #D9661F;
+}
+
+	span.added {
+		position: absolute;
+		right: 0px;
+		top: 0px;
+		font-size: 11px;
+		font-weight: 500;
+		text-transform: uppercase;
+		letter-spacing: 0.1em;
+		padding-top: 3px;
+		background-color: #D9661F;
+	}
+
 /**************************/
 /* Search Map */
 /**************************/
