--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -5,9 +5,9 @@
 		<title>Hack the Hearst - I School Edition</title>
 
 		<!-- Bootstrap CSS -->
-		<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+		<link href="/static/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 		<!-- Custom CSS -->
-		<link href="css/homepage.css" type="text/css" rel="stylesheet"/>
+		<link href="/static/css/homepage.css" type="text/css" rel="stylesheet"/>
 		<!-- Google Fonts: Open Sans -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,700,400' rel='stylesheet' type='text/css'>
 
@@ -83,7 +83,7 @@
 				    			</p>
 				    		</div>
 		    				<div class="visible-lg visible-md col-md-4">
-		    					<img src="images/shape_art.png" class="img-responsive" />
+		    					<img src="/static/images/shape_art.png" class="img-responsive" />
 		    				</div>
 
 				    	</div>
@@ -148,13 +148,13 @@
 
 
 		<!-- Introduce Bootstrap JS at the bottom -->
-		<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="/static/js/jquery-1.10.2.min.js"></script>
+		<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 		<!-- Introduce Search Map JS -->
-	    <script type="text/javascript" src="js/jquery.address.js"></script>
+	    <script type="text/javascript" src="/static/js/jquery.address.js"></script>
 	    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&libraries=places&v=3.14"></script>
-	    <script type="text/javascript" src="js/jquery.geocomplete.min.js"></script>
-	    <script type="text/javascript" src="js/maps_lib.js"></script>
+	    <script type="text/javascript" src="/static/js/jquery.geocomplete.min.js"></script>
+	    <script type="text/javascript" src="/static/js/maps_lib.js"></script>
 	    <script type='text/javascript'>
 	      //<![CDATA[
 	        $(window).resize(function () {
