--- a/app/templates/css/homepage.css
+++ b/app/templates/css/homepage.css
@@ -393,10 +393,14 @@ span.chevron{
   width: 15%;
   opacity: .5;
   font-size: 20px;
-  color: #fff;
+  color: #00203e;
   text-align: center;
   text-shadow: none;
 }
+	.carousel-control:hover {
+		color: #00203e;
+	}
+
 .carousel-control.left {
 	background-image: none;
 }
