--- a/app/templates/artifacts.html
+++ b/app/templates/artifacts.html
@@ -5,11 +5,11 @@
 		<title>Hack the Hearst - I School Edition</title>
 
 		<!-- Bootstrap CSS -->
-		<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+		<link href="/static/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 		<!-- Custom CSS -->
-		<link href="css/homepage.css" type="text/css" rel="stylesheet"/>
+		<link href="/static/css/homepage.css" type="text/css" rel="stylesheet"/>
 		<!-- Custom CSS -->
-		<link href="css/all-tribe-artifacts.css" type="text/css" rel="stylesheet"/>
+		<link href="/static/css/all-tribe-artifacts.css" type="text/css" rel="stylesheet"/>
 		<!-- Google Fonts: Open Sans -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,700,400' rel='stylesheet' type='text/css'>
 
@@ -562,7 +562,7 @@
 
 		<!-- Introduce Bootstrap JS at the bottom -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="/static/js/bootstrap.min.js"></script>
 
 		<script>
 			$(document).ready(function() {
