added /static/ to bootstrap js in artifact-category

--- a/app/templates/artifact-category.html
+++ b/app/templates/artifact-category.html
@@ -250,7 +250,7 @@
 
 		<!-- Introduce Bootstrap JS at the bottom -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="/static/js/bootstrap.min.js"></script>
 
 		<script type="text/javascript">
             $(document).ready(function() {
