--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -29,7 +29,8 @@
 		            	<span class="icon-bar"></span>
 		            	<span class="icon-bar"></span>
 	          		</button>
-	          		<a class="navbar-brand" href="homepage.html">YAPI KAPI</a>
+	          		{% set g = 0			%}
+	          		<a class="navbar-brand" href="homepage.html">YAPI KAPI{{g}}</a>
 	        	</div>
 	        	<div class="navbar-collapse collapse">
 	          		<ul class="nav navbar-nav navbar-right">
