--- a/app/templates/artifact-category.html
+++ b/app/templates/artifact-category.html
@@ -6,9 +6,9 @@
 		<title>Hack the Hearst - I School Edition</title>
 
 		<!-- Bootstrap CSS -->
-		<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+		<link href="/static/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 		<!-- Custom CSS -->
-		<link href="css/homepage.css" type="text/css" rel="stylesheet"/>
+		<link href="/static/css/homepage.css" type="text/css" rel="stylesheet"/>
 		<!-- Google Fonts: Open Sans -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,700,400' rel='stylesheet' type='text/css'>
 
@@ -61,7 +61,7 @@
 						<h3>Clothing <span class="category-h3-details">Artifacts for the Hupa Tribe</span></h3>
 					</div>
 					<div class="col-md-4 col-xs-4">
-						<h4 class="text-right">12 Objects Found</h4>
+						<h4 class="text-right">{{count}} Objects Found</h4>
 					</div>
 	  			</div>
 	  		</div>
@@ -74,163 +74,59 @@
 		</div>
 
 		<div class="container">
-	    	<div class="row">
+
+			{% set g=0 %}
+			{% for x in artifact_list %}
+			
+				{% set g=g+1 %}
+
+				{% if g%4 == 1 %}
+					<div class="row">
+				{% endif %}
+
+
 	    		<div class="col-xs-6 col-md-3">
 	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
 	    				<span class="glyphicon glyphicon-briefcase"></span>
 	    				<span class="satchel-btn-txt">Add +</span>
 	    			</a>
+	    			{% set target = "#"+x["blob_ss"][0] %}
 	    			<div class="thumbnail-container">
-					    <a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-					    	<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
+					    <a data-toggle="modal" data-target={{target}} class="thumbnail">
+					    	{% set source1 = "https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/"+x["blob_ss"][0]+"/derivatives/Medium/content" %}
+					    	<img class="artifact-thumb" src={{source1}} alt="..." />
 					    </a>
 					</div>
-				</div>
-	    		<div class="col-xs-6 col-md-3">
-	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-	    				<span class="glyphicon glyphicon-briefcase"></span>
-	    				<span class="satchel-btn-txt">Add +</span>
-	    			</a>
-	    			<div class="thumbnail-container">
-					    <a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-					    	<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-					    </a>
+				</div>	    		
+	    	
+
+	    		{% if g%4 == 0 %}
 					</div>
-				</div>
-	    		<div class="col-xs-6 col-md-3">
-	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-	    				<span class="glyphicon glyphicon-briefcase"></span>
-	    				<span class="satchel-btn-txt">Add +</span>
-	    			</a>
-	    			<div class="thumbnail-container">
-					    <a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-					    	<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-					    </a>
-					</div>
-				</div>
-	    		<div class="col-xs-6 col-md-3">
-	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-	    				<span class="glyphicon glyphicon-briefcase"></span>
-	    				<span class="satchel-btn-txt">Add +</span>
-	    			</a>
-	    			<div class="thumbnail-container">
-					    <a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-					    	<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-					    </a>
-					</div>
-				</div>
+				{% endif %}
+	    	{% endfor %}
+
+	    	{% if g%4 != 1 %}
 	    	</div>
-	    	<div class="row">
-	    		<div class="col-xs-6 col-md-3">
-	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-	    				<span class="glyphicon glyphicon-briefcase"></span>
-	    				<span class="satchel-btn-txt">Add +</span>
-	    			</a>
-	    			<div class="thumbnail-container">
-					    <a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-					    	<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-					    </a>
-					</div>
-				</div>
-	    		<div class="col-xs-6 col-md-3">
-	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-	    				<span class="glyphicon glyphicon-briefcase"></span>
-	    				<span class="satchel-btn-txt">Add +</span>
-	    			</a>
-	    			<div class="thumbnail-container">
-					    <a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-					    	<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-					    </a>
-					</div>
-				</div>
-	    		<div class="col-xs-6 col-md-3">
-	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-	    				<span class="glyphicon glyphicon-briefcase"></span>
-	    				<span class="satchel-btn-txt">Add +</span>
-	    			</a>
-	    			<div class="thumbnail-container">
-					    <a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-					    	<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-					    </a>
-					</div>
-				</div>
-	    		<div class="col-xs-6 col-md-3">
-	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-	    				<span class="glyphicon glyphicon-briefcase"></span>
-	    				<span class="satchel-btn-txt">Add +</span>
-	    			</a>
-	    			<div class="thumbnail-container">
-					    <a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-					    	<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-					    </a>
-					</div>
-				</div>
-	    	</div>
-	    	<div class="row">
-	    		<div class="col-xs-6 col-md-3">
-	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-	    				<span class="glyphicon glyphicon-briefcase"></span>
-	    				<span class="satchel-btn-txt">Add +</span>
-	    			</a>
-	    			<div class="thumbnail-container">
-					    <a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-					    	<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-					    </a>
-					</div>
-				</div>
-	    		<div class="col-xs-6 col-md-3">
-	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-	    				<span class="glyphicon glyphicon-briefcase"></span>
-	    				<span class="satchel-btn-txt">Add +</span>
-	    			</a>
-	    			<div class="thumbnail-container">
-					    <a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-					    	<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-					    </a>
-					</div>
-				</div>
-	    		<div class="col-xs-6 col-md-3">
-	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-	    				<span class="glyphicon glyphicon-briefcase"></span>
-	    				<span class="satchel-btn-txt">Add +</span>
-	    			</a>
-	    			<div class="thumbnail-container">
-					    <a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-					    	<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-					    </a>
-					</div>
-				</div>
-	    		<div class="col-xs-6 col-md-3">
-	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
-	    				<span class="glyphicon glyphicon-briefcase"></span>
-	    				<span class="satchel-btn-txt">Add +</span>
-	    			</a>
-	    			<div class="thumbnail-container">
-					    <a data-toggle="modal" data-target="#artifact-item-1" class="thumbnail">
-					    	<img class="artifact-thumb" src="https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/f3511ec2-56ee-4f65-a7be/derivatives/OriginalJpeg/content" alt="..." />
-					    </a>
-					</div>
-				</div>
-	    	</div>
-		</div>
+			{% endif %}
+
 
 		<br/><br/> <!-- meh sloppy fix later -->
 
-		<div id="artifact-item-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+		{% for x in artifact_list %}
+			<div id={{x["blob_ss"][0]}} class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-lg">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-						<h4 class="modal-title">Cap</h4>
+						<h4 class="modal-title">{{x['objname_s']}}</h4>
 					</div>					
 					<div class="modal-body">
 				    	<div class="row">
 							<div class="col-md-6">
-					    		<p><strong>Tribe:</strong> Yurok</p>
-					    		<p><strong>Region:</strong> Klamath River Tribes</p>
+					    		<p><strong>Tribe:</strong> Yurok </p>
 					    		<p>
 					    			<strong>Item Description:</strong><br/>
-					    			Work cap. Maily plain twining. 3 strand twining continues from start to where the first zone divider of 3 strand would normally occur. Two encircling bands of yellowish white overlay 4 cm. from start. Near rim is extra single row of 3 strand twining. Plain twining.  Conifer root, white grass.
+					    			{{x['objdescr_s']}}
 					    		</p>
 
 					    		<br/>
@@ -238,14 +134,16 @@
 					    		<button type="button" class="btn btn-primary">Add to My Satchel</button> <button type="button" class="btn btn-default" data-dismiss="modal"><span aria-hidden="true">Close Window</span><span class="sr-only">Close</span></button>
 
 							</div>
+							{% set source2 = "https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/"+x["blob_ss"][0]+"/derivatives/OriginalJpeg/content" %}
 				    		<div class="col-md-6">
-				    			<img src="http://images.natureworldnews.com/data/images/full/2544/cat.jpg?w=600" class="img-responsive" alt="Note">
+				    			<img src={{source2}} class="img-responsive" alt="Note">
 				    		</div>
 				    	</div>
 				    </div>
 				</div>
 			</div>
 		</div>
+		{% endfor %}
  
 
 		<!-- Introduce Bootstrap JS at the bottom -->
