--- a/app/templates/artifact-category.html
+++ b/app/templates/artifact-category.html
@@ -86,7 +86,8 @@
 
 
 	    		<div class="col-xs-6 col-md-3">
-	    			<a href="#" class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
+	    			{% set addtosatchelurl = '/addtosatchel/' + x['id']%}
+	    			<a href= {{addtosatchelurl}} class="add-to-satchel" data-toggle="tooltip" data-original-title="Add item to satchel">
 	    				<span class="glyphicon glyphicon-briefcase"></span>
 	    				<span class="satchel-btn-txt">Add +</span>
 	    			</a>
@@ -130,8 +131,8 @@
 					    		</p>
 
 					    		<br/>
-
-					    		<button type="button" class="btn btn-primary">Add to My Satchel</button> <button type="button" class="btn btn-default" data-dismiss="modal"><span aria-hidden="true">Close Window</span><span class="sr-only">Close</span></button>
+					    		{% set addtosatchelurl = '/addtosatchel/' + x['id']%}
+					    		<button href={{addtosatchelurl}} type="button" class="btn btn-primary">Add to My Satchel</button> <button type="button" class="btn btn-default" data-dismiss="modal"><span aria-hidden="true">Close Window</span><span class="sr-only">Close</span></button>
 
 							</div>
 							{% set source2 = "https://dev.cspace.berkeley.edu/pahma_project/imageserver/blobs/"+x["blob_ss"][0]+"/derivatives/OriginalJpeg/content" %}
