--- a/app/templates/classadmin.html
+++ b/app/templates/classadmin.html
@@ -5,9 +5,9 @@
 		<title>Hack the Hearst - I School Edition</title>
 
 		<!-- Bootstrap CSS -->
-		<link href="/static/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+		<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 		<!-- Custom CSS -->
-		<link href="/static/css/homepage.css" type="text/css" rel="stylesheet"/>
+		<link href="css/homepage.css" type="text/css" rel="stylesheet"/>
 		<!-- Google Fonts: Open Sans -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,700,400' rel='stylesheet' type='text/css'>
 
@@ -17,15 +17,11 @@
 	      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	    <![endif]-->
-		
-		<!-- this is for the teacher's content editor-->	
-		<script src="http://tinymce.cachefly.net/4.1/tinymce.min.js"></script>
-		<script>tinymce.init({selector:'textarea'});</script>
-		
 	</head>
 
 
 	<body>
+		<div id="wrap"> <!-- wrapper to push down footer-->
 	    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	    	<div class="container-fluid">
 	        	<div class="navbar-header">
@@ -112,7 +108,7 @@
 						    <div class="container satchel-row">
 						   		<div class="row">
 									<div class="col-md-3 col-xs-3">
-										<a href="#" data-toggle="modal" data-target="#artifact-item-1" class="student_briefcase" title="View Satchel">
+										<a href="#" data-toggle="modal" data-target="#student-satchel" class="student_briefcase" title="View Satchel">
 											<span class="glyphicon glyphicon-briefcase mod_student"></span>
 											&nbsp;
 											David Eicke
@@ -125,12 +121,12 @@
 										14 thoughts
 									</div>
 									<div class="col-md-3 col-xs-3 text-center">
-										<a href="#">
-											<span class="glyphicon glyphicon-pencil mod_student" title="Edit Name"></span>
+										<a href="#" data-toggle="modal" data-target="#student-edit" title="Edit Name">
+											<span class="glyphicon glyphicon-pencil mod_student"></span>
 										</a> 
 										&nbsp;&nbsp;
-										<a href="#">
-											<span class="glyphicon glyphicon-remove mod_student" title="Remove Student"></span>
+										<a href="#" data-toggle="modal" data-target="#student-remove" title="Remove Student">
+											<span class="glyphicon glyphicon-remove mod_student"></span>
 										</a>
 									</div>
 								</div>
@@ -141,7 +137,7 @@
 						    <div class="container satchel-row">
 						   		<div class="row">
 									<div class="col-md-3 col-xs-3">
-										<a href="#" data-toggle="modal" data-target="#artifact-item-1" class="student_briefcase" title="View Satchel">
+										<a href="#" data-toggle="modal" data-target="#student-satchel" class="student_briefcase" title="View Satchel">
 											<span class="glyphicon glyphicon-briefcase mod_student"></span>
 											&nbsp;
 											Gracen Brilmyer
@@ -170,7 +166,7 @@
 						    <div class="container satchel-row">
 						   		<div class="row">
 									<div class="col-md-3 col-xs-3">
-										<a href="#" data-toggle="modal" data-target="#artifact-item-1" class="student_briefcase" title="View Satchel">
+										<a href="#" data-toggle="modal" data-target="#student-satchel" class="student_briefcase" title="View Satchel">
 											<span class="glyphicon glyphicon-briefcase mod_student"></span>
 											&nbsp;
 											Aditya Mishra
@@ -199,7 +195,7 @@
 						    <div class="container satchel-row">
 						   		<div class="row">
 									<div class="col-md-3 col-xs-3">
-										<a href="#" data-toggle="modal" data-target="#artifact-item-1" class="student_briefcase" title="View Satchel">
+										<a href="#" data-toggle="modal" data-target="#student-satchel" class="student_briefcase" title="View Satchel">
 											<span class="glyphicon glyphicon-briefcase mod_student"></span>
 											&nbsp;
 											Brian Carlo
@@ -228,7 +224,7 @@
 						    <div class="container satchel-row">
 						   		<div class="row">
 									<div class="col-md-3 col-xs-3">
-										<a href="#" data-toggle="modal" data-target="#artifact-item-1" class="student_briefcase" title="View Satchel">
+										<a href="#" data-toggle="modal" data-target="#student-satchel" class="student_briefcase" title="View Satchel">
 											<span class="glyphicon glyphicon-briefcase mod_student"></span>
 											&nbsp;
 											Stephanie Snipes
@@ -256,7 +252,7 @@
 						    <div class="container satchel-row">
 						   		<div class="row">
 									<div class="col-md-3 col-xs-3">
-										<a href="#" data-toggle="modal" data-target="#artifact-item-1" class="student_briefcase" title="Add a new student">
+										<a href="#" data-toggle="modal" data-target="#student-add" title="Add a new student">
 											<span class="glyphicon glyphicon-plus mod_student"></span>
 											&nbsp;
 											Add Student
@@ -278,7 +274,7 @@
 										<br>
 										<form>
 											<textarea id="coursework"></textarea><br>
-											<input type="submit" value="Save Changes">
+											<input type="submit" class="btn btn-primary" value="Save Changes">
 										</form>
 									</div>
 								</div>
@@ -317,8 +313,9 @@
 													<p><label for="verifypassword">Verify new password:</label></p>
 												</div>
 												<div class="col-md-7 col-xs-5">
-													<p><input type="password" id="verifypassword"></p>
-													<p><input type="submit" value="Save Changes"></p>
+													<p><input type="password" id="verifypassword" onkeyup="checkPass(); return false;">
+													<span id="validstatus" class="validstatus"></span></p>
+													<p><input type="submit" class="btn btn-primary" value="Save Changes"></p>													
 												</div>
 											</div>
 											<div class="row">
@@ -349,10 +346,30 @@
 
 			</div>
   		</div>
-
-  		<br/><br/> <!-- meh sloppy fix later -->
 		
-		<div id="artifact-item-1" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+		</div> <!-- closing tag for the wrapper-->
+		<div id="footer">
+		    <div class="container">
+				<div class="row">
+					<div class="col-md-12 col-xs-12 text-center">
+						<p class="text-muted">
+							<a href="about.html" class="footer-link">ABOUT</a> | 
+							<a href="#" class="footer-link">TERMS OF USE</a> | 
+							<a href="http://pahma.berkeley.edu/delphi/modules/privacy/privacy.php" class="footer-link">PRIVACY POLICY</a> | 
+							<a href="http://hearstmuseum.berkeley.edu/" class="footer-link">HEARST MUSEUM WEBSITE</a> |
+							<a href="about.html" class="footer-link">CONTACT</a>
+							<br>
+							COPYRIGHT © <a href="http://hearstmuseum.berkeley.edu/" class="footer-link">PHOEBE A. HEARST MUSEUM OF ANTHROPOLOGY</a>
+							 AND THE REGENTS OF THE <a href="http://www.berkeley.edu/" class="footer-link">UNIVERSITY OF CALIFORNIA</a>. ALL RIGHTS RESERVED.
+						</p>
+					</div>
+				</div>
+		    </div>
+		</div>
+		
+		<!-- modal windows for form input and satchel views -->
+		<!-- students' satchel -->
+		<div id="student-satchel" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-lg">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -454,11 +471,77 @@
 				</div>
 			</div>
 		</div>
+		<!-- adding a new student -->
+		<div id="student-add" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+		        <h4 class="modal-title" id="student-add-title">Add A New Student</h4>
+		      </div>
+			  <form>
+			      <div class="modal-body">
+			        <label>Type in the new student's name:&nbsp;<input type="text" value="" id="student-added" name="student-added"></label>
+			      </div>
+			      <div class="modal-footer">
+			        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+			        <button type="button" class="btn btn-primary btn-success" id="student-add-save">Add the student</button>
+			      </div>
+			  </form>
+		    </div>
+		  </div>
+		</div>
+		<!-- editing a student's name -->
+		<div id="student-edit" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+		        <h4 class="modal-title" id="student-edit-title">Modify Student's Name</h4>
+		      </div>
+			  <form>
+			      <div class="modal-body">
+			        <label>Type in the student's edited name:&nbsp;<input type="text" value="David Eicke" id="student-edited" name="student-edited"></label>
+			      </div>
+			      <div class="modal-footer">
+			        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+			        <button type="button" class="btn btn-primary" id="student-edit-save">Save changes</button>
+			      </div>
+			  </form>
+		    </div>
+		  </div>
+		</div>
+		<!-- removing a student -->
+		<div id="student-remove" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+		        <h4 class="modal-title" id="student-remove-title">Remove Student</h4>
+		      </div>
+			  <form>
+			      <div class="modal-body">
+			        Are you sure you want to remove <strong><span class="">David Eicke</span></strong>? This action cannot be undone.
+			      </div>
+			      <div class="modal-footer">
+			        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+			        <button type="button" class="btn btn-primary btn-danger" id="student-remove-save">Remove the student</button>
+			      </div>
+			  </form>
+		    </div>
+		  </div>
+		</div>
 
 		<!-- Introduce Bootstrap JS at the bottom -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
+		
+		<!-- this is for the teacher's content editor-->	
+		<script src="http://tinymce.cachefly.net/4.1/tinymce.min.js"></script>
+		
 		<script>
+			tinymce.init({selector:'textarea'}); /* initialize teacher's content editor */
+			
 			$('#myTab a').click(function (e) {
   			e.preventDefault()
   			$(this).tab('show')
@@ -466,6 +549,30 @@
 			$('#myTab a[href="#class_settings"]').tab('show')
 			$('#myTab a[href="#class_work"]').tab('show')
 			$('#myTab a[href="#class_list"]').tab('show')
+			
+			function checkPass() {
+			//Store the password field objects into variables ...
+			    var pass1 = document.getElementById('newpassword');
+			    var pass2 = document.getElementById('verifypassword');
+			    var vstatus = document.getElementById('validstatus');
+			    //Compare the values 
+				if ((pass1.value =="") && (pass2.value == "")){
+					//No passwords inputted
+			        pass2.style.border = "";
+					vstatus.style.color = "#FFFFFF";
+			        vstatus.innerHTML = "&nbsp;";
+				}else if(pass1.value == pass2.value){
+			        //The passwords match. 
+			        pass2.style.border = "2px solid #66cc66";
+			        vstatus.style.color = "#66cc66";
+			        vstatus.innerHTML = "<span class=\"glyphicon glyphicon-ok\"></span>";
+			    }else{
+			        //The passwords do not match.
+			        pass2.style.border = "2px solid #ff6666";
+					vstatus.style.color = "#ff6666";
+			        vstatus.innerHTML = "<span class=\"glyphicon glyphicon-remove\"></span>";
+			    }
+			}
 		</script>
 	</body>
 </html>
