--- a/app/templates/choosename.html
+++ b/app/templates/choosename.html
@@ -72,7 +72,7 @@
 						<br>
 	    				<div class="list-group">
 	    				{%for stud in studlist%}
-	    						<a href="/student/{{stud['studname']}}" class="list-group-item">{{}}</a>
+	    						<a href="/studentrender/{{stud['studname']}}" class="list-group-item">{{stud['studname']}}</a>
 	    						{%endfor%}
 	    						
 				    	</div>
