--- a/app/templates/studentform.html
+++ b/app/templates/studentform.html
@@ -12,15 +12,14 @@
     <title>Cover Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/Users/gracenbrilz/Documents/HacktheHearst/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="dist/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -57,14 +56,14 @@
           </div>
           <div id="formcontainer">
             <div class="inner login_area">
-              <form role="form">
+              <form role="form" method="post">
                 <div class="form-group">
                   
-                  <input type="email" class="form-control" id="classname" placeholder="Enter class name">
+                  <input type="text" id="classname" name=classname placeholder="Enter class name">
                 </div>
                 <div class="form-group">
                   
-                  <input type="password" class="form-control" id="password1" placeholder="Password">
+                  <input type="password" class="form-control" id="password1" name=password1 placeholder="Password">
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
               </form>
