--- a/app/templates/landingpage.html
+++ b/app/templates/landingpage.html
@@ -36,23 +36,23 @@
                   <img src="/static/LandingImages/YAPIKAPI_nav_logo.png" class="modallogo">
                   
                 </div>
-                <div class="modal-body">
-                  <form>
+                <form action="" method="post">
+                  <div class="modal-body">
                     <div class="form-group">
                       <label for="exampleInputEmail1">User Name</label>
-                      <input type="email" class="form-control" id="emailaddress" placeholder="Enter email">
+                      <input type="text" class="form-control" id="emailaddress" placeholder="Enter username" name='uname'>
                     </div>
                     <div class="form-group">
                       <label for="pw">Password</label>
-                      <input type="password" class="form-control" id="pw" placeholder="Password">
-                    </div>
-                  </form>
-                  <p>Don't have an account? <a href="/create_account.html">Make one here!<a></p>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Start Exploring!</button>
-                </div>
+                      <input type="password" class="form-control" id="pw" placeholder="Password" name='pword'>
+                    </div>                    
+                    <p>Don't have an account? <a href="/create_account.html">Make one here!<a></p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <input class="btn btn-primary"  type='submit' value='Start Exploring!'>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
