--- a/app/static/css/homepage.css
+++ b/app/static/css/homepage.css
@@ -8,6 +8,7 @@ html, body {
 
 body {
 	padding-top: 80px;
+	color: #003262;
 }
 	.homepage {
 		padding-top: 0px;
@@ -393,10 +394,14 @@ span.chevron{
   width: 15%;
   opacity: .5;
   font-size: 20px;
-  color: #fff;
+  color: #00203e;
   text-align: center;
   text-shadow: none;
 }
+	.carousel-control:hover {
+		color: #00203e;
+	}
+
 .carousel-control.left {
 	background-image: none;
 }
@@ -490,49 +495,3 @@ canvas {-ms-touch-action: double-tap-zoom;}
 
 
 /*change breakpoint to maxwidth 983*/
-
-/**************************/
-/* Class Administration Page */
-/**************************/
-
-span.mod_student{
-	font-size: 1.5em;
-	vertical-align: text-bottom;
-}
-
-a.student_briefcase{
-	text-decoration: none;
-}
-
-/**************************/
-/* Footer  */
-/**************************/
-
-
-html,body {
-  height: 100%;
-}
-
-#wrap {
-	min-height: 100%;
-	height: auto;
-	/* Negative indent footer by its height */
-	margin: 0 auto -60px;
-	/* Pad bottom by footer height */
-	padding: 0 0 60px;
-}
-
-#footer {
-	height: 60px;
-  	background-color: #f5f5f5;
-	padding: 12px;
-}
-
-a.footer-link {
-	color: inherit;
-	text-decoration: none;
-}
-
-a.footer-link:hover {
-	color: blue;
-}
