add logout button to satchel.html

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -39,7 +39,7 @@
 				        	</a>
 				        </li>
 				        <li>
-				        	<a href="artifact-category.html">
+				        	<a href="#">
 				        		<span class="circle-number">2</span> Choose Artifacts
 				        	</a>
 				        </li>
