--- a/app/templates/satchel.html
+++ b/app/templates/satchel.html
@@ -49,6 +49,9 @@
 				            	<span class="glyphicon glyphicon-briefcase"></span>&nbsp;&nbsp;My Satchel
 				            </a>
 				        </li>
+				        <li>
+				        	<a href="/logout" class="logout">Log Out</a>
+				       	</li>
 	          		</ul>
 	        	</div>
 	      	</div>
