--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -83,7 +83,7 @@
 				    			</p>
 				    		</div>
 		    				<div class="visible-lg visible-md col-md-4">
-		    					<img src="images/shape_art.png" class="img-responsive" />
+		    					<img src="/static/images/shape_art.png" class="img-responsive" />
 		    				</div>
 
 				    	</div>
@@ -174,7 +174,7 @@
 	    <script type="text/javascript" src="/static/js/jquery.address.js"></script>
 	    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&libraries=places&v=3.17"></script>
 	    <script type="text/javascript" src="/static/js/jquery.geocomplete.min.js"></script>
-	    <script type="text/javascript" src="/static/js/maps_lib_2.js"></script>
+	    <script type="text/javascript" src="/static/js/maps_lib.js"></script>
 	    <script type='text/javascript'>
 	      //<![CDATA[
 
