--- a/app/static/css/cover.css
+++ b/app/static/css/cover.css
@@ -96,7 +96,7 @@ body {
 }
 
 .cb-slideshow li:nth-child(2) span { 
-    background-image: url(LandingImages/2Blanket.png);
+    background-image: url(LandingImages/2Blanket_o.jpg);
     -webkit-animation-delay: 6s;
     -moz-animation-delay: 6s;
     -o-animation-delay: 6s;
@@ -104,7 +104,7 @@ body {
     animation-delay: 6s; 
 }
 .cb-slideshow li:nth-child(3) span { 
-    background-image: url(LandingImages/3Basket.png);
+    background-image: url(LandingImages/3Basket_o.jpg);
     -webkit-animation-delay: 12s;
     -moz-animation-delay: 12s;
     -o-animation-delay: 12s;
@@ -112,7 +112,7 @@ body {
     animation-delay: 12s; 4
 }
 .cb-slideshow li:nth-child(4) span { 
-    background-image: url(LandingImages/4Necklace.png);
+    background-image: url(LandingImages/4Necklace_o.jpg);
     -webkit-animation-delay: 18s;
     -moz-animation-delay: 18s;
     -o-animation-delay: 18s;
@@ -120,7 +120,7 @@ body {
     animation-delay: 18s; 
 }
 .cb-slideshow li:nth-child(5) span { 
-    background-image: url(LandingImages/5Headdress.png);
+    background-image: url(LandingImages/5Headdress_o.jpg);
     -webkit-animation-delay: 24s;
     -moz-animation-delay: 24s;
     -o-animation-delay: 24s;
@@ -128,7 +128,7 @@ body {
     animation-delay: 24s; 
 }
 .cb-slideshow li:nth-child(6) span { 
-    background-image: url(LandingImages/6Bottle.png);
+    background-image: url(LandingImages/6Bottle_o.jpg);
     -webkit-animation-delay: 30s;
     -moz-animation-delay: 30s;
     -o-animation-delay: 30s;
