--- a/app/static/cover.css
+++ b/app/static/cover.css
@@ -137,7 +137,7 @@ body {
 }
 
 .cb-slideshow li:nth-child(7) span { 
-    background-image: url(LandingImages/7Arrows.png);
+    background-image: url(LandingImages/7Arrows_o.jpg);
     -webkit-animation-delay: 36s;
     -moz-animation-delay: 36s;
     -o-animation-delay: 36s;
