updated homepage.css and html

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -34,12 +34,12 @@
 	        	<div class="navbar-collapse collapse">
 	          		<ul class="nav navbar-nav navbar-right">
 				        <li class="active">
-				        	<a href="homepage.html">
+				        	<a id="homepage-link" href="homepage.html">
 				        		<span class="circle-number">1</span> Select a Tribe
 				        	</a>
 				        </li>
 				        <li>
-				        	<a href="#">
+				        	<a id="artifacts-link">
 				        		<span class="circle-number">2</span> Choose Artifacts
 				        	</a>
 				        </li>
@@ -136,7 +136,7 @@
 
 						<br/>
 
-<!-- 						<label>Select a Template:</label>
+						<!-- <label>Select a Template:</label>
 						<select id="style">
 							<option value=""></option>
 							<option value="3">BecomeADinosaur Template</option>
