update coursework in classadmin page

--- a/app/templates/classadmin.html
+++ b/app/templates/classadmin.html
@@ -305,8 +305,8 @@
 									<div class="col-md-11 col-xs-11">
 										<h4>Modify Your Coursework</h4>
 										<br>
-										<form>
-											<textarea id="coursework">{{coursewrok.classdesc}}</textarea><br>
+										<form method="post">
+											<textarea id="coursework" name="coursework">{{coursewrok.classdesc}}</textarea><br>
 											<input type="submit" class="btn btn-primary" value="Save Changes">
 										</form>
 									</div>
