added reset button next to shapes button

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -95,6 +95,11 @@
 						  <i class='glyphicon glyphicon-search'></i>
 						  Search with Shapes
 						</a>
+						&nbsp;&nbsp;
+						<a class='btn btn-default' id='reset' href='#'>
+						  <i class='glyphicon glyphicon-repeat'></i>
+						  Reset
+						</a>
 
 		    			<hr/>
 
@@ -134,8 +139,6 @@
 						</a>
 
 						<hr/>
-
-						<br/>
 
 						<!-- <label>Select a Template:</label>
 						<select id="style">
