changing shape results buttons positions

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -101,6 +101,24 @@
 						  Reset
 						</a>
 
+						<br/><br/>
+
+						<div id="search-results">
+							<!-- <div class='alert alert-info' id='result_box' >-->
+								<div class='alert alert-info' id="result_count"></div>
+								<strong id="results-list-link"></strong>
+							<!--</div>-->				
+						</div>
+
+						<a class="btn btn-primary" id="view_mode_shape">
+							Show Shape Results
+						</a>		
+
+						<a class='btn btn-default' id='back-search' href='#'>
+						  <i class='glyphicon glyphicon-repeat'></i>
+						  Back to Search
+						</a>
+
 		    			<hr/>
 
 						<h2>
@@ -135,7 +153,7 @@
 						<br/><br/>
 
 						<a class="btn btn-primary" id="view_mode">
-							Search Results
+							Show Address Results
 						</a>
 
 						<hr/>
@@ -149,21 +167,6 @@
 
 					</div> <!-- end #search-functions -->
 
-					<div id="search-results">
-						<!-- <div class='alert alert-info' id='result_box' >-->
-							<div class='alert alert-info' id="result_count"></div>
-							<strong id="results-list-link"></strong>
-						<!--</div>-->				
-					</div>
-
-					<a class="btn btn-primary" id="view_mode_shape">
-						Show Shape Results
-					</a>		
-
-					<a class='btn btn-default' id='back-search' href='#'>
-					  <i class='glyphicon glyphicon-repeat'></i>
-					  Back to Search
-					</a><br/><br/>
 					<div id="resultlist_shape"></div>
 					<div id="resultlist"></div>
 	    		</div>
