added instructions to results section

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -101,24 +101,6 @@
 						  Reset
 						</a>
 
-						<br/><br/>
-
-						<div id="search-results">
-							<!-- <div class='alert alert-info' id='result_box' >-->
-								<div class='alert alert-info' id="result_count"></div>
-								<strong id="results-list-link"></strong>
-							<!--</div>-->				
-						</div>
-
-						<a class="btn btn-primary" id="view_mode_shape">
-							Show Shape Results
-						</a>		
-
-						<a class='btn btn-default' id='back-search' href='#'>
-						  <i class='glyphicon glyphicon-repeat'></i>
-						  Back to Search
-						</a>
-
 		    			<hr/>
 
 						<h2>
@@ -158,15 +140,30 @@
 
 						<hr/>
 
-						<!-- <label>Select a Template:</label>
-						<select id="style">
-							<option value=""></option>
-							<option value="3">BecomeADinosaur Template</option>
-							<option value="4">GrassIsGreener Template</option>
-						</select> -->
-
 					</div> <!-- end #search-functions -->
 
+					<div id="search-results">
+						<!-- <div class='alert alert-info' id='result_box' >-->
+							<div class='alert alert-info' id="result_count"></div>
+							<strong id="results-list-link"></strong>
+						<!--</div>-->				
+					</div>
+
+					<a class="btn btn-primary" id="view_mode_shape">
+						Show Shape Results
+					</a>		
+
+					<a class='btn btn-default' id='back-search' href='#'>
+					  <i class='glyphicon glyphicon-repeat'></i>
+					  Back to Search
+					</a><br/><br/>
+
+					<div id="result-instructions">
+						<h1>Select a Tribe</h1>
+						<hr/>
+						<p>From the results below, select a tribe name to go to the next page to see its artifacts.</p>
+						<br/>
+					</div>
 					<div id="resultlist_shape"></div>
 					<div id="resultlist"></div>
 	    		</div>
@@ -248,6 +245,7 @@
 
 			  $( "#view_mode_shape" ).click(function() {
 				  $("#search-functions").fadeOut();
+			  	  $("#result-instructions").fadeIn();
 				  $("#resultlist_shape").fadeIn();
 				  $("#back-search").fadeIn();
 				  $("#view_mode_shape").fadeOut();
@@ -256,6 +254,7 @@
 
 			  $( "#view_mode" ).click(function() {
 				  $("#search-functions").fadeOut();
+			  	  $("#result-instructions").fadeIn);
 				  $("#resultlist").fadeIn();
 				  $("#back-search").fadeIn();
 				  $("#view_mode").fadeOut();
