squashed syntax bug; hide results instructions on pageload

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -254,7 +254,7 @@
 
 			  $( "#view_mode" ).click(function() {
 				  $("#search-functions").fadeOut();
-			  	  $("#result-instructions").fadeIn);
+			  	  $("#result-instructions").fadeIn();
 				  $("#resultlist").fadeIn();
 				  $("#back-search").fadeIn();
 				  $("#view_mode").fadeOut();
