--- a/app/templates/classadmin.html
+++ b/app/templates/classadmin.html
@@ -110,7 +110,7 @@
 							    <div class="container satchel-row">
 							   		<div class="row">
 										<div class="col-md-3 col-xs-3">
-											<a href="/viewSatchel/{{student.studname}}" data-toggle="modal" data-target="#artifact-item-1" class="student_briefcase" title="View Satchel">
+											<a href="/viewSatchel/{{student.studname}}" class="student_briefcase" title="View Satchel">
 												<span class="glyphicon glyphicon-briefcase mod_student"></span>
 												&nbsp;
 												{{student.studname}}
