student satchel fix

--- a/app/templates/studentssatchel.html
+++ b/app/templates/studentssatchel.html
@@ -30,18 +30,13 @@
 		            	<span class="icon-bar"></span>
 		            	<span class="icon-bar"></span>
 	          		</button>
-	          		<a class="navbar-brand" href="homepage.html">YAPI KAPI</a>
+	          		<a class="navbar-brand" href="/homepage.html">YAPI KAPI</a>
 	        	</div>
 	        	<div class="navbar-collapse collapse">
 	          		<ul class="nav navbar-nav navbar-right">
 				        <li>
-				        	<a href="homepage.html">
-				        		<span class="circle-number">1</span> Select a Tribe
-				        	</a>
-				        </li>
-				        <li>
-				        	<a href="artifacts.html">
-				        		<span class="circle-number">2</span> Choose Artifacts
+				        	<a href="/classadmin">
+				        		<span class="circle-number">1</span> Manage class
 				        	</a>
 				        </li>
 				        <li class="nav-satchel">
@@ -187,9 +182,10 @@
   			e.preventDefault()
   			$(this).tab('show')
 			})
-			$('#myTab a[href="#satchel_artifacts"]').tab('show')
+			
 			$('#myTab a[href="#satchel_tribe"]').tab('show')
 			$('#myTab a[href="#satchel_region"]').tab('show')
+			$('#myTab a[href="#satchel_artifacts"]').tab('show')
 		</script>
 	</body>
 </html>
