artifact-category changes

--- a/app/templates/artifact-category.html
+++ b/app/templates/artifact-category.html
@@ -30,7 +30,7 @@
 		            	<span class="icon-bar"></span>
 		            	<span class="icon-bar"></span>
 	          		</button>
-	          		<a class="navbar-brand" href="homepage.html">YAPI KAPI</a>
+	          		<a class="navbar-brand" href="/homepage.html">YAPI KAPI</a>
 	        	</div>
 	        	<div class="navbar-collapse collapse">
 	          		<ul class="nav navbar-nav navbar-right">
@@ -58,7 +58,7 @@
 		    <div class="container">
 		   		<div class="row">
 					<div class="col-md-8 col-xs-8">
-						<h3>Clothing <span class="category-h3-details">Artifacts for the Hupa Tribe</span></h3>
+						<h3>{{categoryname}}<span class="category-h3-details">Artifacts for the {{tribename}} Tribe</span></h3>
 					</div>
 					<div class="col-md-4 col-xs-4">
 						<h4 class="text-right">{{count}} Objects Found</h4>
