--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -101,6 +101,19 @@
 						  Reset
 						</a>
 
+						<br/>
+
+						<div id="search-results">
+							<!-- <div class='alert alert-info' id='result_box' >-->
+								<div class='alert alert-info' id="result_count"></div>
+								<strong id="results-list-link"></strong>
+							<!--</div>-->				
+						</div>
+
+						<a class="btn btn-primary" id="view_mode_shape">
+							Show Shape Results
+						</a>	
+
 		    			<hr/>
 
 						<h2>
