--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -101,7 +101,7 @@
 						  Reset
 						</a>
 
-						<br/>
+						<br/><br/>
 
 						<div id="search-results">
 							<!-- <div class='alert alert-info' id='result_box' >-->
@@ -155,13 +155,13 @@
 
 					</div> <!-- end #search-functions -->
 
-					<div id="search-results">
-						<!-- <div class='alert alert-info' id='result_box' >-->
-							<div class='alert alert-info' id="result_count"></div>
-							<strong id="results-list-link"></strong>
+<!-- 					<div id="search-results">
+ -->						<!-- <div class='alert alert-info' id='result_box' >-->
+<!-- 							<div class='alert alert-info' id="result_count"></div>
+							<strong id="results-list-link"></strong> -->
 						<!--</div>-->				
-					</div>		
-
+<!-- 					</div>		
+ -->
 					<a class='btn btn-default' id='back-search' href='#'>
 					  <i class='glyphicon glyphicon-repeat'></i>
 					  Back to Search
