--- a/app/templates/landingpage.html
+++ b/app/templates/landingpage.html
@@ -83,7 +83,7 @@
             <h1 class="cover-heading"><img src=/static/LandingImages/YAPIKAPI_logo1.png></h1>
             <p class="lead">Explore the Hearst Museum's artifacts to discover your own story. <br> Collect artifacts, explore culture, and more!</p>
             <div>
-              <button class="btn btn-lg btn-default">Enter as Guest</button>
+              <a class="btn btn-lg btn-default" href="/guestlogin">Enter as Guest</a>
               <button class="btn btn-lg btn-default" data-toggle="modal" data-target="#myModal">Log In / Sign Up</button>
             </div>
           </div>
