--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -262,7 +262,7 @@
 
 
 			  $( "#view_mode" ).click(function() {
-				  // $("#search-functions").fadeOut();
+				  $("#search-functions").fadeOut();
 			  	  $("#result-instructions").fadeIn();
 				  $("#resultlist").fadeIn();
 				  $("#back-search").fadeIn();
