--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -29,7 +29,7 @@
 		            	<span class="icon-bar"></span>
 		            	<span class="icon-bar"></span>
 	          		</button>
-	          		<a class="navbar-brand" href="homepage.html">YAPI KAPI</a>
+	          		<a class="navbar-brand" href="homepage.html"><img src="http://i.imgur.com/q9Zr0a2.png"></a>
 	        	</div>
 	        	<div class="navbar-collapse collapse">
 	          		<ul class="nav navbar-nav navbar-right">
